Deprecation cleanup